Fixed position of layer switcher on small screens

--- a/rando/static/css/style.css
+++ b/rando/static/css/style.css
@@ -812,41 +812,25 @@ header #lang-switch {
 .leaflet-control-zoom-fullscreen:before {
   content: "e";
 }
-#mainmap .leaflet-left .leaflet-control.background-layer-switcher {
-  margin-left: 400px;
-  -webkit-transition: margin-left 300ms linear;
-}
-#mainmap.leaflet-container.fullwidth .leaflet-control.background-layer-switcher {
-  margin-left: 30px;
-}
-#detailmap .leaflet-control.background-layer-switcher {
-  display: none;
-}
-#detailmap.enabled .leaflet-control.background-layer-switcher {
-  display: block;
-}
-.leaflet-control.background-layer-switcher a {
-  height: 30px;
+.leaflet-control.simple-layer-switcher a.background {
+  opacity: 1.0;
   width: 30px;
-  display: inline-block;
-  background-size: 100%;
+  height: 30px;
+  padding: 0;
+  margin-top: 0;
   outline: solid 1px white;
 }
-.leaflet-control.background-layer-switcher a.main {
+.leaflet-control.simple-layer-switcher a.background.main {
   background-image: url(../img/switcher-main.png);
 }
-.leaflet-control.background-layer-switcher a.satellite {
+.leaflet-control.simple-layer-switcher a.background.satellite {
   background-image: url(../img/switcher-satellite.jpg);
 }
 .leaflet-control.simple-layer-switcher a.pois {
-  height: 20px;
-  width: 20px;
   display: inline-block;
-  background-size: 100%;
   background-image: url(../img/switcher-pois.svg);
   background-repeat: no-repeat;
   background-size: 25px;
-  background-position: 50% 50%;
 }
 .pois-list h5 {
   background-image: url(../img/switcher-pois.svg);
@@ -2171,8 +2155,13 @@ ul.errorlist {
   color: red;
 }
 #mainmap .leaflet-left .leaflet-control.simple-layer-switcher {
-  margin-left: 400px;
+  margin-left: 340px;
   -webkit-transition: margin-left 300ms linear;
+}
+@media (min-width: 1044px) {
+  #mainmap .leaflet-left .leaflet-control.simple-layer-switcher {
+    margin-left: 399px;
+  }
 }
 #mainmap.leaflet-container.fullwidth .leaflet-control.simple-layer-switcher {
   margin-left: 30px;
@@ -2185,12 +2174,14 @@ ul.errorlist {
 }
 .leaflet-control.simple-layer-switcher .toggle-layer {
   background-color: #877f84;
-  max-height: 30px;
-  max-width: 30px;
+  height: 20px;
+  width: 20px;
   padding: 5px;
   margin-top: 5px;
   display: block;
   opacity: 0.5;
+  background-size: 100%;
+  background-position: 50% 50%;
 }
 .leaflet-control.simple-layer-switcher .toggle-layer.active {
   margin-left: -1px;
