--- a/rando/static/css/variables-default.less
+++ b/rando/static/css/variables-default.less
@@ -33,6 +33,8 @@
 @filtersbar-height-lg : 65px;
 @filtersbar-height-sm : 115px;
 
+@sidebar-width-lg : 389px;
+@sidebar-width-sm : 330px;
 
 /* Landscape phone to portrait tablet */
 @screen-sm : 767px;
