--- a/rando/tourism/static/tourism/tourism.less
+++ b/rando/tourism/static/tourism/tourism.less
@@ -1,7 +1,12 @@
 .leaflet-control.simple-layer-switcher {
 
   #mainmap .leaflet-left & {
-    margin-left: 400px;
+
+    margin-left: @sidebar-width-sm + 10;
+    @media (min-width: @screen-lg) {
+      margin-left: @sidebar-width-lg + 10;
+    }
+
     -webkit-transition: margin-left 300ms linear;
   }
 
@@ -18,13 +23,15 @@
 
   .toggle-layer {
     background-color: @darkGray;
-    max-height: 30px;
-    max-width: 30px;
+    height: 20px;
+    width: 20px;
     padding: 5px;
     margin-top: 5px;
     display: block;
 
     opacity: 0.5;
+    background-size: 100%;
+    background-position: 50% 50%;
 
     &.active {
       margin-left: -1px;
